# kubric

./: .devcontainer.json  .dockerignore  .flake8  .gitignore  .pylintrc  .readthedocs.yml  Makefile  README.md  bouncing_balls_worker.py  build_tfds.sh  codecov.yml  export_assets_from_blend.py  gso_worker.py  jobspecs.yml  klevr_worker.py  launch.py  launch.sh  logs.txt  make_kubruntu.sh  make_render.sh  object.urdf  requirements.txt  requirements_dev.txt  requirements_full.txt  setup.py  simulator.py  visual_geometry.mtl  worker.py
ManifoldPlus/: .gitignore  .gitmodules  CMakeLists.txt  compile.sh  examples.sh
ManifoldPlus/cmake-3.19.0-rc1-Linux-x86_64/doc/cmake/html/: index.html  objects.inv  searchindex.js
ManifoldPlus/cmake-3.19.0-rc1-Linux-x86_64/doc/cmake/html/command/: add_compile_options.html  add_definitions.html  add_dependencies.html  add_executable.html  build_command.html  cmake_host_system_information.html  cmake_minimum_required.html  cmake_parse_arguments.html  continue.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_update.html  ctest_upload.html  define_property.html  elseif.html  enable_testing.html  endforeach.html  endif.html  endmacro.html  export.html  (+36 more)
ManifoldPlus/cmake-3.19.0-rc1-Linux-x86_64/man/man1/: ccmake.1  cmake.1  ctest.1
ManifoldPlus/cmake-3.19.0-rc1-Linux-x86_64/man/man7/: cmake-buildsystem.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-language.7  cmake-packages.7  cmake-policies.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
ManifoldPlus/data/: chair.off
ManifoldPlus/src/: IO.cc  IO.h  Intersection.h  Manifold.cc  Manifold.h  MeshProjector.cc  MeshProjector.h  main.cc
(+1986 files in other folders)
